Implement FHIR Types in Java